--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Hello World
+<!DOCTYPE html>
+
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+
+    <title>Ian Huynh</title>
+
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+
+  <body>
+      <div class="box-1"></div>
+  </body>
+</html>
