--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   </head>
 
   <body>
-      <div class="box-1"></div>
+      <div class="box-1"> My projects:
+          <ul>
+              <li>This website</li>
+          </ul>
+      </div>
   </body>
 </html>
