--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
   </head>
 
   <body>
-      <div class="box-1"> My projects:
-          <ul>
-              <li>This website</li>
-          </ul>
-      </div>
+      <h1 class="heading"> Ian Huynh
+
+      </h1>
   </body>
 </html>
