--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   </head>
 
   <body>
-      <h1 class="heading"> Ian Huynh
-
-      </h1>
+      <h1 class="heading"> Ian Huynh</h1>
+      <h1 class="heading"> Ian Huynh</h1>
   </body>
 </html>
