--- a/index.html
+++ b/index.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
 
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
 
-    <title>Ian Huynh</title>
+<head>
+  <meta charset="utf-8" />
 
-    <link rel="stylesheet" href="styles.css" />
-  </head>
+  <title>Ian Huynh</title>
 
-  <body>
-      <h1 class="heading"> Ian Huynh</h1>
-      <h1 class="heading"> Ian Huynh</h1>
-  </body>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+  <div class="container1"><!-- base website -->
+    <div class="container2"><!-- with margin -->
+      <div class="top">
+        <h1 class="heading1"> Ian Huynh</h1>
+        <h2 class="heading2"> London, United Kingdom</h2>
+      </div>
+      <div class="middle">
+<!-- TODO: Middle -->
+      </div>
+    </div>
+  </div>
+</body>
+
 </html>
