--- a/index.html
+++ b/index.html
@@ -12,13 +12,32 @@
 
 <body>
   <div class="container1"><!-- base website -->
-    <div class="container2"><!-- with margin -->
-      <div class="top">
-        <h1 class="heading1"> Ian Huynh</h1>
-        <h2 class="heading2"> London, United Kingdom</h2>
-      </div>
-      <div class="middle">
-<!-- TODO: Middle -->
+    <div class="top">
+      <h1 class="heading1"> Ian Huynh</h1>
+      <h3 class="heading2"> London, United Kingdom</h3>
+      <h3 class="heading2"> A place for things</h3>
+    </div>
+    <div class="middle"><!-- add margin to children-->
+      <div class="content">
+
+        <div class="content-slice">
+          <div class="content-slice-top">
+            <div class="subject">My first post</div>
+            <div class="date">2022-01-01</div>
+          </div>
+          <div class="content-slice-middle"></div>
+        </div>
+        
+        <div class="content-slice">
+          <div class="content-slice-top"></div>
+          <div class="content-slice-middle"></div>
+        </div>
+        
+        <div class="content-slice">
+          <div class="content-slice-top"></div>
+          <div class="content-slice-middle"></div>
+        </div>
+
       </div>
     </div>
   </div>
