--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
             <div class="subject">My first post</div>
             <div class="date">2022-01-01</div>
           </div>
-          <div class="content-slice-middle"></div>
+          <div class="content-slice-middle">
+            <iframe width="300px" height="475" src="https://dotnetfiddle.net/Widget/rEsllH" frameborder="0"></iframe>
+          </div>
         </div>
       
 
