--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   <meta charset="utf-8" />
 
   <title>Ian Huynh</title>
-
+  <link rel="icon" href="beans-logo.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
 </head>
 
