--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <div class="content-slice">
           <div class="content-slice-top">
             <div class="subject">My first post</div>
-            <div class="date">2022-01-01</div>
+            <div class="date">1st January 2022</div>
           </div>
           <div class="content-slice-middle">
-            <iframe width="300px" height="475" src="https://dotnetfiddle.net/Widget/rEsllH" frameborder="0"></iframe>
+            <!-- <iframe width="300px" height="475" src="https://dotnetfiddle.net/Widget/rEsllH" frameborder="0"></iframe> -->
           </div>
         </div>
       
